--- a/R/syndromic_ct.Rmd
+++ b/R/syndromic_ct.Rmd
@@ -7,7 +7,7 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-knitr::opts_knit$set(root.dir = normalizePath("..")) #sets Working directory to be 1 folder up
+#knitr::opts_knit$set(root.dir = normalizePath("..")) #sets Working directory to be 1 folder up
 
 library(reshape2)
 library(lubridate)
@@ -17,12 +17,15 @@ library(cdcfluview)
 library(gtrendsR)
 library(rjags)
 library(HDInterval)
+library(shiny)
+library(pbapply)
+library(zoo)
 ```
 
 ##Import and clean the data
 ```{r, eval=F}
-ds1<-read.csv('./DO_NOT_SYNC/yale_view_2018_2019.csv')
-zip.cw<-read.csv('./Data/zipcode-town.csv')
+ds1<-read.csv('../DO_NOT_SYNC/yale_view_2018_2019.csv')
+zip.cw<-read.csv('../Data/zipcode-town.csv')
 
 zip.cw$Zip.Code<-paste0('0',zip.cw$Zip.Code)
 zip.cw[substr(zip.cw$Zip.Code,1,2) =='06',]
@@ -53,44 +56,47 @@ ds2<-merge(ds1, zip.cw, by.x='zipcode', by.y='Zip.Code')
 
 ```{r, eval=F}
 ds1.m<-melt(ds2[,c('adate', 'County','agec','ili','cough','respiratory','circulatory','ili2','all.visits')], id.vars=c('adate','County','agec'))
-saveRDS(ds1.m, './DO_NOT_SYNC/county_ts_ct.rds')
+saveRDS(ds1.m, '../DO_NOT_SYNC/county_ts_ct.rds')
 ds1.c<-acast(ds1.m, agec~adate ~County~variable, fun.aggregate = sum)
 ```
 
 ```{r}
-ds1.m<-readRDS('./DO_NOT_SYNC/county_ts_ct.rds')
+ds1.m<-readRDS('../DO_NOT_SYNC/county_ts_ct.rds')
 ds1.c<-acast(ds1.m, agec~adate ~County~variable, fun.aggregate = sum)
 
 n.dates<-dim(ds1.c)[2]
 ds1.c<-ds1.c[,-n.dates,,] #remove last time point
+saveRDS(ds1.c,'./private_data/shiny_data.rds') #save data for the shiny app
 
 ```
 
 ## View data
 ```{r}
-plot(ds1.c['5',,'Fairfield','cough'], type='l')
-plot(ds1.c['1',,'Fairfield','cough'], type='l')
+counties<-dimnames(ds1.c)[[3]]
+ages<-dimnames(ds1.c)[[1]]
+#syndromes<- dimnames(ds1.c)[[4]]
+syndromes<-'ili2'
+for(j in syndromes){
+for(i in counties){
+par(mfrow=c(2,3))  
+for(k in ages){
+  plot(ds1.c[k,,i,j]/ds1.c[k,,i,'all.visits'], type='l', bty='l', main=paste(j,i,k))
+  }
+ }
+}
 
-plot(ds1.c['5',,'Fairfield','respiratory'], type='l')
-plot(ds1.c['1',,'Fairfield','respiratory'], type='l')
-
-plot(ds1.c['5',,'Fairfield','ili2'], type='l')
-plot(ds1.c['5',,'Fairfield','cough']/ds1.c['5',,'Fairfield','all.visits'], type='l')
-
-plot(ds1.c['5',,'Fairfield','cough'] / ds1.c['1',,'Fairfield','cough'], type='l')
-plot(ds1.c['5',,'Fairfield','ili2'] / ds1.c['1',,'Fairfield','ili2'], type='l')
-
-
-plot(ds1.c['5',,'Fairfield','respiratory']/ds1.c['1',,'Fairfield','respiratory'], type='l')
 
 ```
+
+
+
 
 ##Import auxillary data
 Pulls in google searches for RSV in CT can get 5 years of historical data at weekly reslution (switches to monthly for >5 years)
 ```{r}
 rsv.down<-gtrends(keyword = 'RSV', geo="US-CT", time = "today+5-y",
 gprop = c("web") , category = 0,  low_search_volume = FALSE)
-saveRDS(rsv.down,'./Data/rsv_searches_ct.rds')
+saveRDS(rsv.down,'../Data/rsv_searches_ct.rds')
 rsv<-rsv.down$interest_over_time[,c('date','hits')]
 rsv$date<-as.Date(rsv$date)
 mmwr.week.rsv<-MMWRweek(rsv$date)[,c('MMWRyear','MMWRweek')]
@@ -102,7 +108,7 @@ flusurvnet data
 https://gis.cdc.gov/GRASP/Fluview/FluHospRates.html
 
 ```{r}
-flu<-read.csv('./Data/FluSurveillance_EIP_Connecticut_Data.csv', skip=2)
+flu<-read.csv('../Data/FluSurveillance_EIP_Connecticut_Data.csv', skip=2)
 flu2<-flu[flu$AGE.CATEGORY %in% c('Overall'),]
 #flu2$agec<-NA
 #flu2$agec[flu2$AGE.CATEGORY=='0-4 yr']<-1
@@ -116,7 +122,8 @@ flu2$flu.rate[is.na(flu2$flu.rate)]<-9999
 Aggregate by week and merge auxillary variables
 ```{r}
 ds1.m.wk<-ds1.m
-ds1.m.wk$adate<-floor_date(ds1.m.wk$adate, unit='week')
+#ds1.m.wk$adate<-floor_date(ds1.m.wk$adate, unit='week')
+ds1.m.wk$adate<-ds1.m.wk$adate
 ds1.df<-dcast(ds1.m.wk, agec+adate +County~variable, fun.aggregate = sum)
 mmwr.date<-MMWRweek(ds1.df$adate)
 ds1.df<-cbind.data.frame(ds1.df,mmwr.date)
@@ -125,118 +132,109 @@ combo2<-merge(combo2, rsv, by=c('MMWRyear','MMWRweek'), all.x=T)
 combo2$flu.rate[is.na(combo2$flu.rate)]<-0
 combo2$flu.rate[combo2$flu.rate==9999]<-NA #last few weeks
 
-combo2.sub<-combo2[, c('agec', 'MMWRyear', 'MMWRweek', 'County', 'ili2','cough','respiratory','circulatory','flu.rate',"rsv.searches",'all.visits')]
-ili.m<-melt(combo2.sub, id.vars=c('County','agec','MMWRyear','MMWRweek'))
-ili.a<-acast(ili.m, MMWRyear+MMWRweek ~County~agec~variable , fun.aggregate = sum )
+combo2.sub<-combo2[, c('agec', 'adate','MMWRyear', 'MMWRweek', 'County', 'ili2','cough','respiratory','circulatory','flu.rate',"rsv.searches",'all.visits')]
+ili.m<-melt(combo2.sub, id.vars=c('County','agec','adate','MMWRyear','MMWRweek'))
+ili.a<-acast(ili.m, adate+MMWRyear+MMWRweek ~County~agec~variable , fun.aggregate = sum )
+dimnames(ili.a)[[1]]<-substr(dimnames(ili.a)[[1]],1,10)
 ```
 
 setup epiyear index
 ```{r}
-date.string<-dimnames(ili.a)[[1]]
-dates<-unlist(strsplit(date.string, '_'))
-dates<-matrix(as.numeric(dates), ncol=2, byrow=T)
-epiyr<-dates[,1]
-epiyr[dates[,2]<=26] <- epiyr[dates[,2]<=26]-1
+date.string<-as.Date(dimnames(ili.a)[[1]])
+month<-month(date.string)
+epiyr<-year(date.string)
+epiyr[month<=6] <- epiyr[month<=6]-1
 epiyr.index<-epiyr-min(epiyr)+1
+weekN<-MMWRweek(date.string)[,'MMWRweek']
+day.of.year<-yday(date.string)
 ```
 
 ## Evaluate results after controlling for flu and RSV
 ```{r}
-to.test<-unique(combo2$County)
+counties.to.test<-unique(combo2$County)
 
-inla.func<-function(x.test, outcome.var, syndrome){
-      clean.array.citywide<-ili.a[,x.test,c('1','5'),]
+gam.func<-function(x.test, age.test, syndrome){
+clean.array.citywide<-ili.a[,x.test,,]
       epiyr.index.f<-as.factor(epiyr.index)
       epiyr.index.f2<-as.factor(epiyr.index)
       
-      y.kids = t(clean.array.citywide[,'1',syndrome])
-      y.adult = t(clean.array.citywide[,'5',syndrome])
-              sqrt.rsv =sqrt(clean.array.citywide[,'5','rsv.searches']) #same for all ages and boroughs
-                       sqrt.flu =sqrt(clean.array.citywide[,'5','flu.rate']) #same for all ages and boroughs
-                       sqrt.flu[length(sqrt.flu)]<-sqrt.flu[length(sqrt.flu)-1] #fill in missing last observation
-      t<-1:length(y.kids)
-      t2<-1:length(y.kids)
+      y.age = t(clean.array.citywide[,age.test,syndrome])
+     
+            sqrt.rsv =sqrt(clean.array.citywide[,'5','rsv.searches']) #same for all ages and boroughs
+            sqrt.flu =sqrt(clean.array.citywide[,'5','flu.rate']) #same for all ages and boroughs
+            
+            
+            sqrt.flu<- na.locf(sqrt.flu)  #fill in missing observations for flu at end of TS with most recent observed values
+      t2<-1:length(y.age)
       
-      weekN<-rep(1:52, length.out=length(y.kids))
-      
-      ds.glm<-cbind.data.frame('weekN'=weekN,'y.kids'=y.kids[1,],'y.adult'=y.adult[1,],sqrt.rsv, sqrt.flu, t, t2)
-      form1<-as.formula(paste0(outcome.var,"~ f(epiyr.index.f,sqrt.rsv, model='iid')+   #rsv effect varies by epiyr
-                    f(epiyr.index.f2,sqrt.flu, model='iid') + #flu effect, varies by epiyear
+
+      ds.glm<-cbind.data.frame('day.of.year'=day.of.year,'y.age'=y.age[1,],sqrt.rsv, sqrt.flu,  t2,epiyr.index.f)
+      form1<-as.formula(paste0('y.age',"~ epiyr.index.f*sqrt.rsv +   #rsv effect varies by epiyr
+                   epiyr.index.f*sqrt.flu + #flu effect, varies by epiyear
                    t2+                      #linear trend   
-                   f(t, model = 'iid') +    #unexplained variation..iid or ar1?
-                   f(weekN, model = 'rw2', cyclic=T)" #seasonality 
+                   s(day.of.year, bs='cc')" #seasonality 
                    ))
-      mod1<-inla(form1, 
-                 family='poisson', data=ds.glm, control.predictor = list(compute=TRUE, link = 1),control.compute=list(config=TRUE)) 
-      mod1.mean.re.t<-mod1$summary.random$t$mean 
-      mod1.sd.re.t<-mod1$summary.random$t$sd 
+      mod1<-gam(form1, 
+                 family='poisson', data=ds.glm) 
+    pred1<-predict(mod1, type='response', newdata = ds.glm)
+    resid1<-y.age[1,]/pred1
       
-      out.list<-list(t.mean=mod1.mean.re.t, t.sd=mod1.sd.re.t, 'mod1'=mod1)
+      out.list<-list(y=y.age[1,], pred=pred1, resid1=resid1)
       return(out.list)
 }
-all.mods.kids<-sapply(to.test,inla.func,outcome.var='y.kids' , syndrome='ili2', simplify=F)
-all.mods.adults<-sapply(to.test,inla.func,outcome.var='y.adult' ,syndrome='ili2',simplify=F)
 
-all.mods.kids.resp<-sapply(to.test,inla.func,outcome.var='y.kids' , syndrome='respiratory', simplify=F)
-all.mods.adults.resp<-sapply(to.test,inla.func,outcome.var='y.adult' ,syndrome='respiratory',simplify=F)
 
-all.mods.kids.cough<-sapply(to.test,inla.func,outcome.var='y.kids' , syndrome='cough', simplify=F)
-all.mods.adults.cough<-sapply(to.test,inla.func,outcome.var='y.adult' ,syndrome='cough',simplify=F)
+syndromes<- c('ili2', 'respiratory','cough') 
+ages <-   c('1','2','3','4','5')
+
+all.gam.res<- pblapply(syndromes, function(x){
+  ww<- lapply(ages, function(y){
+    lapply(counties.to.test, gam.func, age.test=y, syndrome=x)
+  }
+  ) 
+  names(ww)<- ages
+  return(ww)
+  }
+)
+names(all.gam.res)<-syndromes
+
 ```
 
 
-Next extract mean and SD subtract
+Next extract residuals and fitted values
 ```{r}
-inla.extract.fun<-function(adult.ds, kid.ds){
-  all.mod.kid.mean<-sapply(kid.ds, '[[', "t.mean")
-  all.mod.kid.sd<-sapply(kid.ds, '[[', "t.sd")
-  all.mod.adult.mean<-sapply(adult.ds, '[[', "t.mean")
-  all.mod.adult.sd<-sapply(adult.ds, '[[', "t.sd")
-  covar1<-cov(c(all.mod.adult.mean),c(all.mod.kid.mean))
-  
-  #####THIS IS WHAT IS USED IN STAGE 2 
-  diff.adult.kids<-all.mod.adult.mean- all.mod.kid.mean
-  diff.adult.kids.var<- all.mod.adult.sd^2 +all.mod.kid.sd^2 +2*covar1
-  diff.adult.kids.prec<-1/diff.adult.kids.var
-  
-  out.list<-list('kid.resid'=all.mod.kid.mean,'adult.resid'=all.mod.adult.mean,'diff.adult.kids'=diff.adult.kids)
-  return(out.list)
-  #############
+
+#Residuals for all age groups for ILI
+ili2.resid<- sapply(all.gam.res[['ili2']], function(x) sapply(x,'[[','resid1'), simplify='array')
+ili2.pred<- sapply(all.gam.res[['ili2']], function(x) sapply(x,'[[','pred'), simplify='array')
+obs<- sapply(all.gam.res[['ili2']], function(x) sapply(x,'[[','y'), simplify='array')
+
+ili.diff.adults.kids<-ili2.resid
+
+par(mfrow=c(2,3), mar=c(3,2,1,1))
+for(i in 1:5){
+  matplot(ili2.resid[1,,i], type='l', bty='l', ylab='Residual')
 }
 
-ili.diff.adults.kids<-inla.extract.fun(adult.ds=all.mods.adults, kid.ds=all.mods.kids)
-resp.diff.adults.kids<-inla.extract.fun(all.mods.adults.resp, all.mods.kids.resp)
-cough.diff.adults.kids<-inla.extract.fun(all.mods.adults.cough, all.mods.kids.cough)
+par(mfrow=c(2,3), mar=c(3,2,1,1))
+for(i in 1:5){
+  matplot(ili2.pred[,,i], type='l', bty='l', ylab='Fitted')
+  matplot(obs[,,i], type='l', bty='l', ylab='Fitted', add=T)
+
+}
 
 
 
-#matplot(all.mod.adult.mean, type='l')
-#matplot(all.mod.kid.mean, type='l')
-
-matplot(ili.diff.adults.kids$diff.adult.kids, type='l')
-matplot(resp.diff.adults.kids$diff.adult.kids, type='l')
-matplot(cough.diff.adults.kids$diff.adult.kids, type='l')
-
-
-matplot(ili.diff.adults.kids$kid.resid, type='l')
-matplot(ili.diff.adults.kids$adult.resid, type='l')
-
-
-matplot(resp.diff.adults.kids$kid.resid, type='l')
-matplot(resp.diff.adults.kids$adult.resid, type='l')
-
-matplot(cough.diff.adults.kids$kid.resid, type='l')
-matplot(cough.diff.adults.kids$adult.resid, type='l')
 
 ```
 
 ```{r}
 
-#sapply(colnames(diff.adult.kids), function(x) write.csv(cbind.data.frame('diff'=diff.adult.kids[,x], 't'=1:length(diff.adult.kids[,x])) , paste0('./satscan/data/kid.v.adult.',x, '.csv') )  )
+#sapply(colnames(diff.adult.kids), function(x) write.csv(cbind.data.frame('diff'=diff.adult.kids[,x], 't'=1:length(diff.adult.kids[,x])) , paste0('../satscan/data/kid.v.adult.',x, '.csv') )  )
 colnames(ili.diff.adults.kids$diff.adult.kids)<-as.character(to.test)
 sapply(colnames(ili.diff.adults.kids$diff.adult.kids), function(x){
   ds<-cbind.data.frame('id'=1:nrow(ili.diff.adults.kids$diff.adult.kids),'one'=1,  't'=1:length(ili.diff.adults.kids$diff.adult.kids[,x]), 'diff'=ili.diff.adults.kids$diff.adult.kids[,x] )
-  write.csv(ds , paste0('./satscan/data/kid.v.adult.',x, '.csv') )}  
+  write.csv(ds , paste0('../satscan/data/kid.v.adult.',x, '.csv') )}  
   )
 
 ```
@@ -257,7 +255,7 @@ Doesn't seem to work too well due to underlying trends?. Both permutation and ca
 totest<-c('ili2','respiratory','cough')
 
 satscan.fun<-function(syndrome){
-coord1<-read.csv('./Data/CT_ZIPs_2010_centroids.csv')
+coord1<-read.csv('../Data/CT_ZIPs_2010_centroids.csv')
 coord1$zipcode<-paste0('0', coord1$site)
 
 ili.ag5 <- ds2[ds2$agec==5 & ds2[,syndrome]==T,c('zipcode','adate',syndrome)]
@@ -285,8 +283,8 @@ write.geo(mygeo, location = td, file = "mygeo", userownames=F)
 write.cas(mycas, location = td, file = "mycas")
 write.cas(mycon, location = td, file = "mycon")
 
-#write.geo(mygeo, location = './satscan/data/', file = "geo.spacetime.ct", userownames=F)
-#write.cas(mycas, location = './satscan/data/', file = "ili.spacetime")
+#write.geo(mygeo, location = '../satscan/data/', file = "geo.spacetime.ct", userownames=F)
+#write.cas(mycas, location = '../satscan/data/', file = "ili.spacetime")
 
 #Parameter files
 
@@ -301,7 +299,7 @@ ss.options(list(EndDate=last.date, CoordinatesFile="mygeo.geo", AnalysisType=4, 
 ss.options(list(ProspectiveStartDate="2020/01/01", ReportGiniClusters="n", LogRunToHistoryFile="n"))
 
 write.ss.prm(td, "mybase")
-#write.ss.prm('./satscan/satscan parameters', "spacetime")
+#write.ss.prm('../satscan/satscan parameters', "spacetime")
 
 mybase = satscan(td, "mybase")
 return(mybase)
@@ -311,8 +309,5 @@ satscan.res<-lapply(totest, satscan.fun)
 
 summary(satscan.res[[1]])
 ```
-
-
-
 
 
